--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-AWS_ID=""
-AWS_SECRET=""
-AWS_BUCKET_NAME=""
+AWS_ID=AKIAJFYXHUWOJT7DIODQ
+AWS_SECRET=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
+AWS_BUCKET_NAME="shanebucket111"
