--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "aws-sdk": "^2.702.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "uuid": "^8.1.0",
+    "uuidv4": "^6.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
